Fixed a bug with the carousel, and added the avatars into the carousel
Before, it wouldn't account for the width of the scrollbar and would offset everything, now it works with it

--- a/src/pages/manageProfiles/avatars.css
+++ b/src/pages/manageProfiles/avatars.css
@@ -1,5 +1,3 @@
 .avatar__wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
+  padding: var(--outside-padding);
 }
